# itps_voice_recognition

./: .gitignore  pyproject.toml  readme.md
dsets/: __init__.py  annotation_data.py  dset_config.py  dsets.py  itps_corpus.py  itps_dset.py  jsut_dataset.py  librispeech.py  librispeech_dset.py  ljl_dataset.py  simple_dsets.py
dsets/dset_collection/: itps_dset.py  librispeech_dset.py  simple_dsets.py
dsets/helpers/: helpers.py
itpsaudio/: aug_transforms.py  callbacks.py  core.py  metrics.py  modelling.py  tf_tokenizers.py  transforms.py  utils.py
notebooks/: check_data.py  check_git_import_working.ipynb  english_from_scratch_300m.ipynb  ennglish_from_scratch.ipynb  fastai_wav2vec2.ipynb  forced_alignment.ipynb  japanese_from_scratch.ipynb  japanese_from_scratch_1b.py  japanese_from_scratch_300m.py  testing_lightning.ipynb  transformers_fastai.ipynb  w2v2_english_finetune.py
scripts/: annotation_data_prep.py  fastai_audio.py  fastaitest.py  ljl_speech_prep.py  testing_lightning_flash.py  zip2tar.py
scripts/data_prep/: J_KAC.py  annotation_data_prep.py  extracting_data.py  helpers.py  itps_data_prep.py  jsut_dset_prep.py  ljl_speech_prep.py  nict_spreds.py  rwcp_scripts.py  zip2tar.py
scripts/training/: english_own_loss.py  hyperpara_tuning_en.py  hyperpara_tuning_jp.py  old_rev_fixwandb_jp.py  pretraining_script.py  tuning.py
src/dsets/: dsets.py
src/itpsaudio/: aug_transforms.py  callbacks.py  core.py  metrics.py  modelling.py  tf_tokenizers.py  transforms.py
tests/dsets/: test_dsets.py  test_librispeech.py
tests/itpsaudio/: get_test_data.py  (+3 more)
(+14 files in other folders)
