[tool.poetry]
name = "itps_transcription_model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch = "^1.0.2"
transformers = "^4.16.2"
datasets = "^1.18.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
